--- a/Day 1/day1.css
+++ b/Day 1/day1.css
@@ -1,3 +1,16 @@
+
+#container{
+    width: 500px;
+    height: 200px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+
+
+}
+
 #gradient-container{
+    height: 180px;
+    width: 220px;
     background-image: linear-gradient(to bottom right, red, yellow);
 }
