--- a/Day 1/day1.css
+++ b/Day 1/day1.css
@@ -1,16 +1,26 @@
 
 #container{
-    width: 500px;
-    height: 200px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    width: 100vh;
+    height: 100vh;
+    display:grid;
+    justify-content: center;
+    align-content: center;
 
 
 }
 
 #gradient-container{
-    height: 180px;
-    width: 220px;
+    height: 80vh;
+    width: 100vh;
     background-image: linear-gradient(to bottom right, red, yellow);
+    display:grid;
+    justify-content: center;
+    align-content: center;
+}
+
+#hundred{
+    display:grid;
+    justify-content: center;
+    grid-auto-rows: auto;
+
 }
